--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,22 @@
 <h1>New User</h1>
 
+<%= form_with model: @user do |f| %>
+    <%= f.label :first_name %>
+    <%= f.text_field :first_name %><br>
+    <%= f.label :last_name %>
+    <%= f.text_field :last_name %><br>
+    <%= f.label :email %>
+    <%= f.text_field :email %><br>
+    <%= f.label :password %>
+    <%= f.text_field :password %><br>
+    <%= f.label :password_confirmation %>
+    <%= f.text_field :password_confirmation %><br>
+    <%= f.label :gi_skill %>
+    <%= f.select :gi_skill, gi_levels %>
+    <%= f.label :nogi_skill %>
+    <%= f.select :nogi_skill, nogi_levels %>
+    <%= f.label :weight %>
+    <%= f.select :weight, (130..250) %><br>
+
+    <%= f.submit %>
+<% end %>
