Add navbar to layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
+    <div class="navbar">
+      <% if logged_in? %>
+        <%= link_to current_user.full_name, user_path(current_user) %>
+      <% else %>
+        <%= link_to "Login", login_path %>
+      <% end %>
+      <%= link_to "Tournaments", tournaments_path %>
+    </div>
     <%= yield %>
   </body>
 </html>
