Add EventsController and begin to join Users/Tournaments

--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -3,7 +3,7 @@
 <ul>
 <% @tournaments.each do |tourney| %>
     <li>
-        Organization: <%= tourney.organization %><br>
+        Organization: <%= link_to tourney.organization, tournament_path(tourney.id) %><br>
         Date: <%= tourney.date %><br>
         Registration Open: <%= tourney.registration_open %><br>
         Registration Close: <%= tourney.registration_close %><br>
