--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,4 +2,18 @@
 
 <h2>Tournaments</h2>
 
+<ul>
+<% @user.tournaments.each do |tournament| %>
+<!-- Another use for tournament partial -->
+    <li>
+        Organization: <%= link_to tournament.organization, tournament_path(tournament.id) %><br>
+        Date: <%= tournament.date %><br>
+        Registration Open: <%= tournament.registration_open %><br>
+        Registration Close: <%= tournament.registration_close %><br>
+        <%= link_to "Edit", edit_tournament_path(tournament) %>
+        <%= button_to "Delete", tournament, method: :delete %><br><br>
+    </li>
+<% end %>
+</ul>
+
 <%= button_to "Delete", @user, method: :delete %>
