--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
         <%= link_to current_user.full_name, user_path(current_user) %>
       <% else %>
         <%= link_to "Login", login_path %>
+        <%= link_to "Signup", signup_path %>
       <% end %>
       <%= link_to "Tournaments", tournaments_path %>
     </div>
