--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -6,9 +6,9 @@
     <%= f.label :email %>
     <%= f.text_field :email %><br>
     <%= f.label :password %>
-    <%= f.text_field :password %><br>
+    <%= f.password_field :password %><br>
     <%= f.label :password_confirmation %>
-    <%= f.text_field :password_confirmation %><br>
+    <%= f.password_field :password_confirmation %><br>
     <%= f.label :gi_skill %>
     <%= f.select :gi_skill, gi_levels %>
     <%= f.label :nogi_skill %>
